[tool.poetry]
name = "llm4mdg"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.8.2"
langchain = "0.2.12"
langchain-community = "0.2.11"
langchain-openai = "0.1.20"
loguru = "^0.7.2"
jinja2 = "^3.1.4"
nanoid = "^2.0.0"
chromadb = "^0.5.5"
langchain-chroma = "^0.1.2"
langchain-milvus = "^0.1.4"
python-dotenv = "^1.0.1"
dockerfile-parse = "^2.0.1"
neo4j = "^5.23.1"
langchain-anthropic = "^0.1.23"
langchain-google-genai = "^1.0.9"
langchain-google-vertexai = "^1.0.8"
cymple = "^0.11.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
